# MyQtApp

./: .gitignore  CMakeLists.txt  README.md  Trained_model.py  build.sh
build_new/: MyQtApp
build_new/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_new/MyQtApp_autogen/: deps  mocs_compilation.cpp
build_new/MyQtApp_autogen/UVLADIE3JM/: moc_logindialog.cpp.d  moc_mainwindow.cpp.d  moc_model_inference.cpp.d  moc_usertypedialog.cpp.d
frugally-deep-master/include/fdeep/layers/: depthwise_conv_2d_layer.hpp
src/: CMakeLists.txt  doctor.cpp  doctor.h  hospitaldatamanager.cpp  hospitaldatamanager.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model_inference.cpp  model_inference.h  patient.cpp  patient.h  person.cpp  person.h  usertypedialog.cpp  usertypedialog.h  usertypedialog.ui  xraybuffer.cpp  xraybuffer.h
tests/: test_doctor.cpp  test_hospitaldatamanager.cpp  test_main.cpp  test_patient.cpp  test_person.cpp  test_xraybuffer.cpp
